# rune-lang

./: .gitignore  Cargo.toml  README.md
docs/: INTEGRATION_GUIDE.md
docs/architecture/: RUNE_01_OVERVIEW.md  RUNE_02_COMPILER_PIPELINE.md  RUNE_03_TARGETS_RUNTIME_PRIMITIVES.md  RUNE_04_INTEROP.md  RUNE_05_TOOLCHAIN_ROADMAP_ENV.md  RUNE_06_MEMORY_MODEL.md  RUNE_07_STDLIB_AND_PQC.md  RUNE_08_Framework_Coverage.md
docs/dev/: BUILD_LOG_01.md  BUILD_LOG_02.md  BUILD_LOG_03.md  BUILD_LOG_04.md  BUILD_LOG_05.md  BUILD_LOG_06.md  BUILD_LOG_07.md  BUILD_LOG_08.md  BUILD_LOG_09.md  BUILD_LOG_10.md  BUILD_LOG_11.md  BUILD_LOG_12.md  BUILD_LOG_13.md  BUILD_LOG_14.md  BUILD_LOG_15.md  BUILD_LOG_16.md  BUILD_LOG_17.md  BUILD_LOG_18.md  BUILD_LOG_19.md  BUILD_LOG_20.md  DECISIONS_01.md  PROGRESS.md  PROGRESS_02.md  TROUBLESHOOTING_01.md
examples/: c_integration.c  python_integration.py  rust_integration.rs.example
schemas/: policy.fbs
src/: lib.rs  main.rs  playground.rs
src/ast/: nodes.rs
src/codegen/: bench_tests.rs  cross_backend_tests.rs  llvm_gen.rs  llvm_tests.rs  mod.rs  tests.rs  wasm_gen.rs
src/compiler/: edition.rs  mod.rs  module_loader.rs  multifile_tests.rs  tests.rs
src/docgen/: mod.rs  tests.rs
src/embedding/: mod.rs  safe_api.rs  tests.rs  wire.rs
src/formatter/: mod.rs  tests.rs
src/ir/: display.rs  lower.rs  mod.rs  nodes.rs  tests.rs
src/lexer/: scanner.rs  tests.rs  token.rs
src/lsp/: mod.rs  tests.rs
src/manifest/: mod.rs  tests.rs
src/parser/: expr.rs  mod.rs  parser.rs  patterns.rs  tests.rs  types.rs
src/runtime/: attestation.rs  audit.rs  evaluator.rs  mod.rs  pipeline.rs  tests.rs
src/smt/: mod.rs  solver.rs  tests.rs
src/stdlib/: integration_tests.rs  mod.rs
src/stdlib/attestation/: mod.rs
src/stdlib/audit/: mod.rs
src/stdlib/collections/: mod.rs
src/stdlib/crypto/: error.rs  hash.rs  kem.rs  mod.rs  sign.rs  verify.rs
src/stdlib/env/: mod.rs
src/stdlib/io/: mod.rs
src/stdlib/net/: mod.rs
src/stdlib/policy/: mod.rs
src/stdlib/time/: mod.rs
src/types/: capability_tests.rs  checker.rs  checker_tests.rs  context.rs  effects_tests.rs  linearity_tests.rs  mod.rs  module_tests.rs  program_tests.rs  scope.rs  tests.rs  ty.rs
tests/: cli_tests.rs
tools/: rune.h
tools/playground/: build.sh  index.html  playground.js  style.css
tools/tree-sitter-rune/: grammar.js  package.json
tools/tree-sitter-rune/queries/: highlights.scm
tools/tree-sitter-rune/test/corpus/: policies.txt
tools/vscode-rune/: extension.js  package.json
tools/vscode-rune/syntaxes/: rune.tmLanguage.json
