[package]
name = "rune-lang"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rune-lang"
path = "src/main.rs"

[[bin]]
name = "rune-lsp"
path = "src/bin/rune-lsp.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
wasm-encoder = "0.246"
wasmtime = "43"
z3 = { version = "0.20", features = ["bundled"] }

[dev-dependencies]
