[package]
name = "rune-lang"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "rune-lang"
path = "src/main.rs"
required-features = ["runtime"]

[[bin]]
name = "rune-lsp"
path = "src/bin/rune-lsp.rs"
required-features = ["lsp"]

[features]
default = ["smt", "runtime", "lsp"]
smt = ["z3"]
runtime = ["wasmtime"]
lsp = ["tower-lsp", "tokio"]
playground = ["wasm-bindgen"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
hex = "0.4"
hmac = "0.12"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"], optional = true }
tower-lsp = { version = "0.20", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-encoder = "0.246"
wasmtime = { version = "43", optional = true }
z3 = { version = "0.20", features = ["bundled"], optional = true }

[dev-dependencies]
